# pdfsmith

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yaml
src/pdfsmith/: __init__.py  api.py  cli.py  config.py
src/pdfsmith/backends/: __init__.py  anthropic_backend.py  aws_textract_backend.py  azure_document_intelligence_backend.py  databricks_backend.py  docling_backend.py  extractous_backend.py  gemini_backend.py  google_document_ai_backend.py  kreuzberg_backend.py  llamaparse_backend.py  marker_backend.py  openai_backend.py  pdfminer_backend.py  pdfplumber_backend.py  pymupdf4llm_backend.py  pymupdf_backend.py  pypdf_backend.py  pypdfium2_backend.py  registry.py  unstructured_backend.py
tests/: __init__.py  conftest.py  test_api.py  test_async.py  test_backends.py  test_cli.py  test_commercial_backends.py  test_config.py
tests/integration/: README.md  test_commercial_integration.py
